infra/kubernetes/namespaces/backend-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
  namespace: dev
  labels:
    app.kubernetes.io/name: tremplin-backend
    app.kubernetes.io/instance: backend-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tremplin-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tremplin-backend
        app.kubernetes.io/instance: backend-api
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
      - name: backend-api
        image: ghcr.io/codel-open-contrib/tremplin-backend:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "200m"
            memory: "512Mi"
          limits:
            cpu: "1"
            memory: "1Gi"
