infra/kubernetes/namespaces/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tremplin-ingress
  namespace: dev
  annotations:
    # On retire le rewrite-target qui casse le frontend
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: public  # "public" est le défaut de MicroK8s. Si ça ne marche pas, remettez "nginx"
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
